[tool.poetry]
name = "tdd project"
version = "0.0.1"
description = ""
authors = ["Diego Alba <diegoalba06@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.3"
fastapi = "^0.111.0"
uvicorn = "^0.30.0"
pydantic = "^2.7.2"
pydantic-settings = "^2.2.1"
motor = "^3.4.0"
pytest = "^8.2.1"
pytest-asyncio = "^0.23.7"
pre-commit = "^3.7.1"
httpx = "^0.25.1"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = [
  "--strict-config",
  "--strict-markers",
  "--ignore=docs_src",
]
xfail_strict = true
junit_family = "xunit2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
